# batya_script

./: CMakeLists.txt  bytecode_commands  commands  generate_command_codes.py  generate_keywords.py  main.cpp  string_utility.cpp  string_utility.hpp  test
ast/: address.cpp  address.hpp  assignment.cpp  assignment.hpp  binary_operator.cpp  binary_operator.hpp  condition.cpp  condition.hpp  conditional.cpp  conditional.hpp  declaration_reference.cpp  declaration_reference.hpp  expression.cpp  expression.hpp  expression_block.cpp  expression_block.hpp  function_invocation.cpp  function_invocation.hpp  function_signature.cpp  function_signature.hpp  unary_operator.cpp  unary_operator.hpp  while.cpp  while.hpp
ast/declarations/: declaration.cpp  declaration.hpp  function_declaration.cpp  function_declaration.hpp  struct_declaration.cpp  struct_declaration.hpp  variable_declaration.cpp  variable_declaration.hpp
ast/literals/: boolean_literal.cpp  boolean_literal.hpp  integer_literal.cpp  integer_literal.hpp  literal.cpp  literal.hpp  long_literal.cpp  long_literal.hpp  usize_literal.cpp  usize_literal.hpp
ast/parser/: parser.cpp  parser.hpp  token.cpp  token.hpp
ast/typing/: binary_operator.cpp  binary_operator.hpp  built_in_types_container.cpp  built_in_types_container.hpp  common_type.cpp  type.cpp  (+8 more)
bytecode/: bytecode_builder.cpp  bytecode_builder.hpp  codes.cpp  codes.hpp  interpreter.cpp  interpreter.hpp  stack.cpp  stack.hpp
compiler/: compiler.cpp  compiler.hpp
utility/: indexed_container.cpp  indexed_container.hpp  single_pointer.cpp  single_pointer.hpp
(+6 files in other folders)
